turned on handling

--- a/subject.html
+++ b/subject.html
@@ -8,7 +8,7 @@
 
 
 <title>Welcome to Yahoo!</title></head>
-<body language=Javascript onLoad="" bgcolor=#ffffff>
+<body language=Javascript onLoad="readForm(1);setupKeyboard();" bgcolor=#ffffff>
 
 
 <form method=post action="https://edit.yahoo.com/config/register" name=IOS onsubmit="return hash(this)"><input type=hidden name=".save" value=1>
